fixed label li alignment in forms

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -73,7 +73,8 @@ ul li label{
   position: relative;
   font-weight: 300;
   font-size: 1.35em;
-  padding: 25px 25px 25px 80px;
+  // padding: 25px 25px 25px 80px;
+  padding: 10px 25px 40px 80px;
   margin: 10px auto;
   height: 30px;
   z-index: 9;
@@ -92,7 +93,8 @@ ul li .check{
   border-radius: 100%;
   height: 35px;
   width: 35px;
-  top: 30px;
+  // top: 30px;
+  top: 18px;
   left: 20px;
 	z-index: 5;
 	transition: border .25s linear;
