--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,7 +187,7 @@ ul li label {
   position: relative;
   font-weight: 300;
   font-size: 1.35em;
-  padding: 25px 25px 25px 80px;
+  padding: 10px 25px 40px 80px;
   margin: 10px auto;
   height: 30px;
   z-index: 9;
@@ -204,7 +204,7 @@ ul li .check {
   border-radius: 100%;
   height: 35px;
   width: 35px;
-  top: 30px;
+  top: 18px;
   left: 20px;
   z-index: 5;
   -o-transition: border .25s linear;
